# preprocessor

./: LICENSE  README.org  preprocessor.cabal  stack-8.0.1.yaml  stack.yaml  todo.org
app/: Main.hs
src/: Lib.hs  Preprocessor.hs
src/Language/C/Preprocessor/: Remover.hs
src/Language/C/Preprocessor/Remover/Internal/: AddPadding.hs  Preprocess.hs  Types.hs
src/Preprocessor/: CppOutput.hs  Loc.hs  Parser.hs  Preprocess.hs  SYBUtils.hs  Types.hs  Visitor.hs
src/Preprocessor/Internal/: AddPadding.hs  CppOutput.hs  Parser.hs  Preprocess.hs  Types.hs
test/: LibSpec.hs  Main.hs
test/Test/: Utils.hs
