name:                preprocessor
version:             0.1.0
synopsis:            Remove cpp annotations to get the source ready for parsing
description:         Please see README.md
homepage:            http://github.com/meditans/preprocessor#readme
license:             MIT
license-file:        LICENSE              
author:              Carlo Nucera
maintainer:          meditans@gmail.com
copyright:           2016 Carlo Nucera
category:            Source Code Analysis
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Preprocessor
                     , Preprocessor.Internal.Preprocess
                     , Preprocessor.Internal.Types
                     , Preprocessor.Internal.AddPadding
  build-depends:       base >= 4.7 && < 5
                     , Cabal >= 1.22.8.0
                     , directory >= 1.2.2.0
                     , extra >= 1.4.10
                     , filemanip >= 0.3.6.3
                     , filepath >= 1.4.0.0
                     , ghc >= 7.10.3
                     , ghc-paths >= 0.1.0.9
                     , microlens >= 0.4.4.3
                     , process >= 1.2.3.0
  if impl(ghc >= 8.0)
    build-depends:     template-haskell
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite preprocessor-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , directory >= 1.2.2.0
                     , haskell-src-exts >= 1.18.2
                     , hspec >= 2.2
                     , preprocessor == 0.1.0
                     , process >= 1.2.3.0
                     , temporary >= 1.2
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/meditans/preprocessor
