name:                preprocessor
version:             0.1.0.0
synopsis:            Remove cpp annotations to get the source ready for static analysis.
description:         Remove cpp annotations using the configuration with which you build the package, to get the source ready for static analysis with a parsing library like haskell-src-exts.
homepage:            http://github.com/meditans/preprocessor#readme
license:             MIT
license-file:        LICENSE              
author:              Carlo Nucera
maintainer:          meditans@gmail.com
copyright:           2016 Carlo Nucera
category:            Source Code Analysis, CPP
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.C.Preprocessor.Remover
                     , Language.C.Preprocessor.Remover.Internal.Preprocess
                     , Language.C.Preprocessor.Remover.Internal.Types
                     , Language.C.Preprocessor.Remover.Internal.AddPadding
  build-depends:       base >= 4.7 && < 5
                     , Cabal
                     , directory
                     , extra
                     , filemanip
                     , filepath
                     , ghc
                     , ghc-paths
                     , microlens
                     , process
  if impl(ghc >= 8.0)
    build-depends:     template-haskell
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite preprocessor-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , haskell-src-exts
                     , hspec
                     , preprocessor
                     , process
                     , temporary
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/meditans/preprocessor
